--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,14 +12,14 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:fontFamily="@font/poppins_regular"
             android:id="@+id/head_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dim18"
             android:layout_marginTop="@dimen/dim12"
+            android:fontFamily="@font/poppins_regular"
             android:text="@string/find_track_and_eat_healthy_food"
-            android:textColor="@color/dark_green"
+            android:textColor="@color/label_color"
             android:textSize="@dimen/dimtext18"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -48,18 +48,20 @@
             app:layout_constraintBottom_toBottomOf="@+id/main_card"
             app:layout_constraintStart_toStartOf="@id/main_card"
             app:layout_constraintTop_toTopOf="@id/main_card" />
+
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="50dp"
             android:layout_height="46dp"
-            android:elevation="@dimen/dim4"
             android:layout_marginBottom="@dimen/dim32"
             android:background="@drawable/ic_calories_icon"
             android:contentDescription="@string/calories_icon_description"
+            android:elevation="@dimen/dim4"
             app:layout_constraintBottom_toBottomOf="@+id/pie_chart"
             app:layout_constraintEnd_toEndOf="@+id/pie_chart"
             app:layout_constraintStart_toStartOf="@+id/pie_chart"
             app:layout_constraintTop_toTopOf="@+id/pie_chart" />
+
         <androidx.cardview.widget.CardView
             android:id="@+id/info_card"
             android:layout_width="match_parent"
@@ -73,12 +75,12 @@
             app:layout_constraintTop_toBottomOf="@+id/main_card" />
 
         <TextView
-            android:fontFamily="@font/poppins_semi_bold"
             android:id="@+id/weight_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="38dp"
             android:elevation="@dimen/dim4"
+            android:fontFamily="@font/poppins_semi_bold"
             android:text="@string/textWeight"
             android:textColor="@color/white"
             android:textSize="@dimen/dimtext24"
@@ -88,7 +90,6 @@
             app:layout_constraintTop_toTopOf="@+id/hight_label" />
 
         <TextView
-            android:fontFamily="@font/poppins_semi_bold"
             android:id="@+id/hight_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -96,6 +97,7 @@
             android:layout_marginEnd="@dimen/dim32"
             android:layout_marginBottom="@dimen/dim16"
             android:elevation="@dimen/dim2"
+            android:fontFamily="@font/poppins_semi_bold"
             android:text="@string/textHieght"
             android:textColor="@color/white"
             android:textSize="@dimen/dimtext24"
@@ -106,11 +108,11 @@
             app:layout_constraintTop_toTopOf="@+id/info_card" />
 
         <TextView
-            android:fontFamily="@font/poppins_regular"
             android:id="@+id/body_fat_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:elevation="@dimen/dim2"
+            android:fontFamily="@font/poppins_regular"
             android:text="@string/body_fat"
             android:textColor="@color/white"
             android:textSize="@dimen/dimtext16"
@@ -119,11 +121,11 @@
             app:layout_constraintTop_toTopOf="@+id/hight_text" />
 
         <TextView
-            android:fontFamily="@font/poppins_regular"
             android:id="@+id/weight_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:elevation="@dimen/dim2"
+            android:fontFamily="@font/poppins_regular"
             android:text="@string/textLabelWieght"
             android:textColor="@color/white"
             android:textSize="@dimen/dimtext16"
@@ -133,11 +135,11 @@
             app:layout_constraintTop_toBottomOf="@+id/weight_label" />
 
         <TextView
-            android:fontFamily="@font/poppins_regular"
             android:id="@+id/hight_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:elevation="@dimen/dim2"
+            android:fontFamily="@font/poppins_regular"
             android:text="@string/textLabelHeight"
             android:textColor="@color/white"
             android:textSize="@dimen/dimtext16"
@@ -147,12 +149,12 @@
             app:layout_constraintTop_toTopOf="@+id/weight_text" />
 
         <TextView
-            android:fontFamily="@font/poppins_semi_bold"
             android:id="@+id/body_fat_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/dim32"
             android:elevation="2dp"
+            android:fontFamily="@font/poppins_semi_bold"
             android:text="@string/textFat"
             android:textColor="@color/white"
             android:textSize="@dimen/dimtext24"
@@ -162,14 +164,14 @@
             app:layout_constraintTop_toTopOf="@+id/hight_label" />
 
         <TextView
-            android:fontFamily="@font/poppins_medium"
             android:id="@+id/collections_for_you"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dim20"
             android:layout_marginTop="@dimen/dim16"
+            android:fontFamily="@font/poppins_medium"
             android:text="@string/collections_for_you"
-            android:textColor="@color/dark_green"
+            android:textColor="@color/label_color"
             android:textSize="@dimen/dimtext16"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -177,24 +179,24 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/protein_meal_card"
-            android:layout_width="180dp"
+            android:layout_width="160dp"
             android:layout_height="160dp"
-            android:layout_marginStart="16dp"
+
             android:layout_marginTop="16dp"
             app:cardBackgroundColor="#fff"
             app:cardCornerRadius="8dp"
             app:cardElevation="8dp"
             app:layout_constraintEnd_toStartOf="@+id/vitamin_d3_meal_card"
             app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/collections_for_you" />
 
         <androidx.cardview.widget.CardView
             android:id="@+id/vitamin_d3_meal_card"
-            android:layout_width="180dp"
+            android:layout_width="160dp"
             android:layout_height="160dp"
             android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
             app:cardBackgroundColor="#fff"
             app:cardCornerRadius="8dp"
             app:cardElevation="8dp"
@@ -205,9 +207,9 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/fiber_meal_card"
-            android:layout_width="180dp"
+            android:layout_width="160dp"
             android:layout_height="160dp"
-            android:layout_marginTop="@dimen/dim18"
+            android:layout_marginTop="@dimen/dim16"
             android:layout_marginBottom="@dimen/dim16"
             app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="@dimen/dim8"
@@ -219,7 +221,7 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/high_carb_meal_card"
-            android:layout_width="180dp"
+            android:layout_width="160dp"
             android:layout_height="160dp"
             android:layout_marginBottom="@dimen/dim16"
             app:cardBackgroundColor="@color/white"
@@ -243,13 +245,13 @@
             app:layout_constraintTop_toTopOf="@id/protein_meal_card" />
 
         <TextView
-            android:fontFamily="@font/poppins_regular"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dim14"
             android:elevation="@dimen/dim16"
+            android:fontFamily="@font/poppins_regular"
             android:text="@string/high_protein_meals"
-            android:textColor="@color/dark_green"
+            android:textColor="@color/label_color"
             android:textSize="@dimen/textCardtext"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@id/high_protein_image"
@@ -269,14 +271,14 @@
             tools:ignore="ContentDescription" />
 
         <TextView
-            android:fontFamily="@font/poppins_regular"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dim14"
             android:elevation="@dimen/dim16"
+            android:fontFamily="@font/poppins_regular"
             android:text="@string/top_10_recipes_n_contains_vitamin_d3"
             android:textAlignment="center"
-            android:textColor="@color/dark_green"
+            android:textColor="@color/label_color"
             android:textSize="@dimen/textCardtext"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@id/vitamin_image"
@@ -296,14 +298,14 @@
             app:layout_constraintTop_toTopOf="@id/fiber_meal_card" />
 
         <TextView
-            android:fontFamily="@font/poppins_regular"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dim14"
             android:elevation="@dimen/dim16"
+            android:fontFamily="@font/poppins_regular"
             android:text="@string/fibers"
             android:textAlignment="center"
-            android:textColor="@color/dark_green"
+            android:textColor="@color/label_color"
             android:textSize="@dimen/textCardtext"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@id/fiber_image"
@@ -323,14 +325,14 @@
             app:layout_constraintTop_toTopOf="@id/high_carb_meal_card" />
 
         <TextView
-            android:fontFamily="@font/poppins_regular"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dim8"
             android:elevation="@dimen/dim16"
+            android:fontFamily="@font/poppins_regular"
             android:text="@string/high_carb_meals"
             android:textAlignment="center"
-            android:textColor="@color/dark_green"
+            android:textColor="@color/label_color"
             android:textSize="@dimen/textCardtext"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@id/high_carb_image"
@@ -351,30 +353,28 @@
             app:layout_constraintStart_toStartOf="@+id/orange_circle" />
 
         <TextView
-            android:fontFamily="@font/poppins_bold"
             android:id="@+id/protein_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="44dp"
-            android:layout_marginEnd="18dp"
+            android:layout_marginStart="40dp"
             android:elevation="4dp"
+            android:fontFamily="@font/poppins_bold"
             android:text="216 g"
-            android:textColor="@color/dark_green"
+            android:textColor="@color/text_color"
             android:textSize="@dimen/dimtext8"
             app:layout_constraintBottom_toBottomOf="@+id/protein_text"
-            app:layout_constraintEnd_toEndOf="@+id/main_card"
             app:layout_constraintStart_toEndOf="@+id/protein_text"
             app:layout_constraintTop_toTopOf="@+id/protein_text" />
 
         <TextView
-            android:fontFamily="@font/poppins_regular"
             android:id="@+id/protein_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dim8"
             android:elevation="@dimen/dim4"
+            android:fontFamily="@font/poppins_regular"
             android:text="@string/protein"
-            android:textColor="@color/dark_green"
+            android:textColor="@color/text_color"
             android:textSize="@dimen/dimtext10"
             app:layout_constraintStart_toEndOf="@+id/blue_circle"
             app:layout_constraintTop_toTopOf="@+id/blue_circle" />
@@ -383,7 +383,7 @@
             android:id="@+id/orange_circle"
             android:layout_width="14dp"
             android:layout_height="14dp"
-            android:layout_marginStart="50dp"
+            android:layout_marginStart="40dp"
             android:background="@drawable/circle_shape"
             android:backgroundTint="@color/green_text_color"
             android:elevation="@dimen/dim4"
@@ -392,13 +392,13 @@
             app:layout_constraintTop_toTopOf="@+id/pie_chart" />
 
         <TextView
-            android:fontFamily="@font/poppins_bold"
             android:id="@+id/carb_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:elevation="@dimen/dim4"
+            android:fontFamily="@font/poppins_bold"
             android:text="@string/carbText"
-            android:textColor="@color/dark_green"
+            android:textColor="@color/text_color"
             android:textSize="@dimen/dimtext8"
             app:layout_constraintBottom_toBottomOf="@+id/carb_text"
             app:layout_constraintEnd_toEndOf="@+id/protein_number"
@@ -406,14 +406,14 @@
             app:layout_constraintTop_toTopOf="@+id/carb_text" />
 
         <TextView
-            android:fontFamily="@font/poppins_regular"
             android:id="@+id/carb_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dim8"
             android:elevation="@dimen/dim4"
+            android:fontFamily="@font/poppins_regular"
             android:text="@string/carb"
-            android:textColor="@color/dark_green"
+            android:textColor="@color/text_color"
             android:textSize="@dimen/dimtext10"
             app:layout_constraintStart_toEndOf="@+id/orange_circle"
             app:layout_constraintTop_toTopOf="@+id/orange_circle" />
@@ -431,13 +431,13 @@
             app:layout_constraintTop_toBottomOf="@+id/orange_circle" />
 
         <TextView
-            android:fontFamily="@font/poppins_bold"
             android:id="@+id/fat_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:elevation="@dimen/dim4"
+            android:fontFamily="@font/poppins_bold"
             android:text="@string/fatText"
-            android:textColor="@color/dark_green"
+            android:textColor="@color/text_color"
             android:textSize="@dimen/dimtext8"
             app:layout_constraintBottom_toBottomOf="@+id/fat_text"
             app:layout_constraintEnd_toEndOf="@+id/carb_number"
@@ -445,13 +445,13 @@
             app:layout_constraintTop_toTopOf="@+id/fat_text" />
 
         <TextView
-            android:fontFamily="@font/poppins_regular"
             android:id="@+id/fat_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:elevation="@dimen/dim4"
+            android:fontFamily="@font/poppins_regular"
             android:text="@string/fat"
-            android:textColor="@color/dark_green"
+            android:textColor="@color/text_color"
             android:textSize="@dimen/dimtext10"
             app:layout_constraintStart_toStartOf="@+id/carb_text"
             app:layout_constraintTop_toTopOf="@+id/yellow_circle" />
