--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="primary">#37B64B</color>
-    <color name="dark_green">#005F73</color>
+    <color name="label_color">#474747</color>
+    <color name="text_color">#008E7F</color>
     <color name="gray_mid">#C4C4C4</color>
     <color name="item_color">#FFFFFF</color>
 
