--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -27,7 +27,7 @@
         <androidx.cardview.widget.CardView
             android:id="@+id/main_card"
             android:layout_width="match_parent"
-            android:layout_height="180dp"
+            android:layout_height="@dimen/cardLayoutHigh_homepage"
             android:layout_marginHorizontal="@dimen/dim16"
             android:layout_marginTop="@dimen/dim8"
             app:cardBackgroundColor="@color/white"
@@ -40,8 +40,8 @@
 
         <com.github.mikephil.charting.charts.PieChart
             android:id="@+id/pie_chart"
-            android:layout_width="160dp"
-            android:layout_height="160dp"
+            android:layout_width="@dimen/chart_width_home"
+            android:layout_height="@dimen/chart_height_home"
             android:elevation="@dimen/dim4"
             app:layout_constraintBottom_toBottomOf="@+id/main_card"
             app:layout_constraintStart_toStartOf="@id/main_card"
@@ -49,8 +49,8 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="50dp"
-            android:layout_height="46dp"
+            android:layout_width="@dimen/chartImage_width_home"
+            android:layout_height="@dimen/chartImage_height_home"
             android:layout_marginBottom="@dimen/dim32"
             android:background="@drawable/ic_calories_icon"
             android:contentDescription="@string/calories_icon_description"
@@ -66,7 +66,7 @@
             android:layout_height="96dp"
             android:layout_marginHorizontal="@dimen/dim16"
             android:layout_marginTop="@dimen/dim16"
-            app:cardBackgroundColor="#559960"
+            app:cardBackgroundColor="@color/card_color_home"
             app:cardCornerRadius="@dimen/dim8"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -76,7 +76,7 @@
             android:id="@+id/weight_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="38dp"
+            android:layout_marginStart="@dimen/marginstart_home"
             android:elevation="@dimen/dim4"
             android:fontFamily="@font/poppins_semi_bold"
             android:text="@string/textWeight"
@@ -141,7 +141,6 @@
             android:text="@string/textLabelHeight"
             android:textColor="@color/white"
             android:textSize="@dimen/dimtext16"
-
             app:layout_constraintEnd_toEndOf="@+id/hight_label"
             app:layout_constraintStart_toStartOf="@+id/hight_label"
             app:layout_constraintTop_toTopOf="@+id/weight_text" />
@@ -167,10 +166,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dim20"
             android:layout_marginTop="@dimen/dim16"
-            android:fontFamily="@font/poppins_medium"
             android:text="@string/collections_for_you"
-            android:textColor="@color/label_color"
-            android:textSize="@dimen/dimtext16"
+           style="@style/title_text"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/info_card" />
@@ -179,11 +176,10 @@
             android:id="@+id/protein_meal_card"
             android:layout_width="160dp"
             android:layout_height="160dp"
-
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="@dimen/margintop_card_home"
             app:cardBackgroundColor="#fff"
-            app:cardCornerRadius="8dp"
-            app:cardElevation="8dp"
+            app:cardCornerRadius="@dimen/dim8"
+            app:cardElevation="@dimen/dim8"
             app:layout_constraintEnd_toStartOf="@+id/vitamin_d3_meal_card"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintHorizontal_chainStyle="packed"
@@ -194,10 +190,10 @@
             android:id="@+id/vitamin_d3_meal_card"
             android:layout_width="160dp"
             android:layout_height="160dp"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="@dimen/dim16"
             app:cardBackgroundColor="#fff"
-            app:cardCornerRadius="8dp"
-            app:cardElevation="8dp"
+            app:cardCornerRadius="@dimen/dim8"
+            app:cardElevation="@dimen/dim8"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/protein_meal_card"
@@ -267,16 +263,14 @@
             tools:ignore="ContentDescription" />
 
         <TextView
-            android:layout_width="150dp"
+            android:layout_width="@dimen/textwidth_home"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dim14"
             android:elevation="@dimen/dim16"
-            android:fontFamily="@font/poppins_regular"
             android:text="@string/top_10_recipes_n_contains_vitamin_d3"
             android:textAlignment="center"
-            android:textColor="@color/label_color"
-            android:textSize="@dimen/textCardtext"
-            android:textStyle="bold"
+            android:fontFamily="@font/poppins_regular"
+            style="@style/body_text"
             app:layout_constraintEnd_toEndOf="@id/vitamin_image"
             app:layout_constraintStart_toStartOf="@id/vitamin_image"
             app:layout_constraintTop_toBottomOf="@id/vitamin_image" />
@@ -298,12 +292,10 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dim14"
             android:elevation="@dimen/dim16"
-            android:fontFamily="@font/poppins_regular"
             android:text="@string/fibers"
             android:textAlignment="center"
-            android:textColor="@color/label_color"
-            android:textSize="@dimen/textCardtext"
-            android:textStyle="bold"
+            style="@style/body_text"
+            android:fontFamily="@font/poppins_regular"
             app:layout_constraintEnd_toEndOf="@id/fiber_image"
             app:layout_constraintStart_toStartOf="@id/fiber_image"
             app:layout_constraintTop_toBottomOf="@id/fiber_image" />
@@ -325,22 +317,20 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dim8"
             android:elevation="@dimen/dim16"
-            android:fontFamily="@font/poppins_regular"
             android:text="@string/high_carb_meals"
             android:textAlignment="center"
-            android:textColor="@color/label_color"
-            android:textSize="@dimen/textCardtext"
-            android:textStyle="bold"
+            style="@style/body_text"
+            android:fontFamily="@font/poppins_regular"
             app:layout_constraintEnd_toEndOf="@id/high_carb_image"
             app:layout_constraintStart_toStartOf="@id/high_carb_image"
             app:layout_constraintTop_toBottomOf="@id/high_carb_image" />
 
         <View
             android:id="@+id/blue_circle"
-            android:layout_width="14dp"
-            android:layout_height="14dp"
-            android:layout_marginVertical="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_width="@dimen/dim14"
+            android:layout_height="@dimen/dim14"
+            android:layout_marginVertical="@dimen/dim16"
+            android:layout_marginBottom="@dimen/dim16"
             android:background="@drawable/circle_shape"
             android:backgroundTint="@color/dark_green_pie_chart"
             android:elevation="@dimen/dim4"
@@ -352,12 +342,12 @@
             android:id="@+id/protein_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="40dp"
-            android:elevation="4dp"
+            android:layout_marginStart="@dimen/marginstart"
+            android:elevation="@dimen/dim4"
             android:fontFamily="@font/poppins_bold"
-            android:text="216 g"
+            android:text="@string/_216_g"
             android:textColor="@color/text_color"
-            android:textSize="@dimen/dimtext8"
+            android:textSize="@dimen/dimtext10"
             app:layout_constraintBottom_toBottomOf="@+id/protein_text"
             app:layout_constraintStart_toEndOf="@+id/protein_text"
             app:layout_constraintTop_toTopOf="@+id/protein_text" />
@@ -377,9 +367,9 @@
 
         <View
             android:id="@+id/orange_circle"
-            android:layout_width="14dp"
-            android:layout_height="14dp"
-            android:layout_marginStart="40dp"
+            android:layout_width="@dimen/dim14"
+            android:layout_height="@dimen/dim14"
+            android:layout_marginStart="@dimen/marginstart"
             android:background="@drawable/circle_shape"
             android:backgroundTint="@color/green_text_color"
             android:elevation="@dimen/dim4"
@@ -395,7 +385,7 @@
             android:fontFamily="@font/poppins_bold"
             android:text="@string/carbText"
             android:textColor="@color/text_color"
-            android:textSize="@dimen/dimtext8"
+            android:textSize="@dimen/dimtext10"
             app:layout_constraintBottom_toBottomOf="@+id/carb_text"
             app:layout_constraintEnd_toEndOf="@+id/protein_number"
             app:layout_constraintStart_toStartOf="@+id/protein_number"
@@ -434,7 +424,7 @@
             android:fontFamily="@font/poppins_bold"
             android:text="@string/fatText"
             android:textColor="@color/text_color"
-            android:textSize="@dimen/dimtext8"
+            android:textSize="@dimen/dimtext10"
             app:layout_constraintBottom_toBottomOf="@+id/fat_text"
             app:layout_constraintEnd_toEndOf="@+id/carb_number"
             app:layout_constraintStart_toStartOf="@+id/carb_number"
