--- a/app/src/main/res/layout/fragment_calculate.xml
+++ b/app/src/main/res/layout/fragment_calculate.xml
@@ -9,7 +9,7 @@
 
     <TextView
         android:fontFamily="@font/poppins_bold"
-        android:id="@+id/textView"
+        android:id="@+id/title_calculate"
         style="@style/title_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -29,7 +29,7 @@
         android:layout_marginTop="28dp"
         android:text="@string/calculator_body"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/title_calculate" />
 
     <TextView
         android:fontFamily="@font/poppins_medium"
