--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="primary">#37B64B</color>
-    <color name="label_color">#474747</color>
     <color name="text_color">#008E7F</color>
     <color name="gray_mid">#C4C4C4</color>
     <color name="item_color">#FFFFFF</color>
@@ -24,5 +23,6 @@
     <color name="light_blue_pie_chart">#C8ECE2</color>
     <color name="dark_green_pie_chart">#37B64B</color>
     <color name="green_text_color">#008E7F</color>
+    <color name="card_color_home">#559960</color>
 
 </resources>
