--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,7 +3,7 @@
     <style name="Theme.NutritionsApp" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/primary</item>
-        <item name="colorPrimaryVariant">@color/label_color</item>
+        <item name="colorPrimaryVariant">@color/normal_text_black</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
@@ -28,11 +28,21 @@
 
     <style name="body_text">
         <item name="android:textColor">@color/normal_text_black</item>
-        <item name="android:textSize">15sp</item>
+        <item name="android:textSize">14sp</item>
         <item name="android:fontFamily">@font/poppins_medium</item>
     </style>
 
+    <style name="number_text">
+        <item name="android:textColor">@color/text_color</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:fontFamily">@font/poppins_medium</item>
+    </style>
 
+    <style name="number_text_detals">
+        <item name="android:textColor">@color/normal_text_black</item>
+        <item name="android:textSize">@dimen/label_size</item>
+        <item name="android:fontFamily">@font/poppins_semi_bold</item>
+    </style>
     <style name="Spinner" parent="Widget.AppCompat.Light.DropDownItem.Spinner">
         <item name="android:paddingStart">0dp</item>
         <item name="android:paddingEnd">0dp</item>
@@ -40,23 +50,12 @@
         <item name="android:textSize">12sp</item>
     </style>
 
-    <style name="linerlayout">
-        <item name="android:orientation">horizontal</item>
-        <item name="android:paddingTop">18dp</item>
-        <item name="android:paddingBottom">17dp</item>
-        <item name="android:paddingLeft">29dp</item>
-        <item name="android:paddingRight">25dp</item>
-    </style>
-
-    <style name="linerlayout2" parent="linerlayout">
-        <item name="android:layout_marginTop">20dp</item>
-    </style>
 
 
 
     <style name="textview" >
         <item name="android:textSize">14sp</item>
-        <item name="android:textColor">@color/label_color</item>
+        <item name="android:textColor">@color/normal_text_black</item>
         <item name="android:elevation">2dp</item>
         <item name="android:textStyle">bold</item>
     </style>
