--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             style="@style/title_text"
             android:layout_marginStart="@dimen/dim18"
-            android:layout_marginTop="@dimen/dim12"
+            android:layout_marginTop="@dimen/dim16"
             android:fontFamily="@font/poppins_regular"
             android:text="@string/find_track_and_eat_healthy_food"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -30,7 +30,7 @@
             android:layout_height="@dimen/cardLayoutHigh_homepage"
             android:layout_marginHorizontal="@dimen/dim16"
             android:layout_marginTop="@dimen/dim8"
-            app:cardBackgroundColor="@color/white"
+            app:cardBackgroundColor="@color/card_bg"
             app:cardCornerRadius="@dimen/dim8"
             app:cardElevation="@dimen/dim4"
 
@@ -162,12 +162,12 @@
 
         <TextView
             android:id="@+id/collections_for_you"
+            style="@style/title_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/dim20"
-            android:layout_marginTop="@dimen/dim16"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
             android:text="@string/collections_for_you"
-           style="@style/title_text"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/info_card" />
@@ -177,12 +177,11 @@
             android:layout_width="160dp"
             android:layout_height="160dp"
             android:layout_marginTop="@dimen/margintop_card_home"
-            app:cardBackgroundColor="#fff"
+            app:cardBackgroundColor="@color/card_bg"
             app:cardCornerRadius="@dimen/dim8"
             app:cardElevation="@dimen/dim8"
             app:layout_constraintEnd_toStartOf="@+id/vitamin_d3_meal_card"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/collections_for_you" />
 
@@ -191,7 +190,7 @@
             android:layout_width="160dp"
             android:layout_height="160dp"
             android:layout_marginStart="@dimen/dim16"
-            app:cardBackgroundColor="#fff"
+            app:cardBackgroundColor="@color/card_bg"
             app:cardCornerRadius="@dimen/dim8"
             app:cardElevation="@dimen/dim8"
             app:layout_constraintEnd_toEndOf="parent"
@@ -205,7 +204,7 @@
             android:layout_height="160dp"
             android:layout_marginTop="@dimen/dim16"
             android:layout_marginBottom="@dimen/dim16"
-            app:cardBackgroundColor="@color/white"
+            app:cardBackgroundColor="@color/card_bg"
             app:cardCornerRadius="@dimen/dim8"
             app:cardElevation="@dimen/dim8"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -218,7 +217,7 @@
             android:layout_width="160dp"
             android:layout_height="160dp"
             android:layout_marginBottom="@dimen/dim16"
-            app:cardBackgroundColor="@color/white"
+            app:cardBackgroundColor="@color/card_bg"
             app:cardCornerRadius="@dimen/dim8"
             app:cardElevation="@dimen/dim8"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -346,7 +345,7 @@
             android:elevation="@dimen/dim4"
             android:fontFamily="@font/poppins_bold"
             android:text="@string/_216_g"
-            android:textColor="@color/text_color"
+            android:textColor="@color/normal_text_black"
             android:textSize="@dimen/dimtext10"
             app:layout_constraintBottom_toBottomOf="@+id/protein_text"
             app:layout_constraintStart_toEndOf="@+id/protein_text"
@@ -360,7 +359,7 @@
             android:elevation="@dimen/dim4"
             android:fontFamily="@font/poppins_regular"
             android:text="@string/protein"
-            android:textColor="@color/text_color"
+            android:textColor="@color/normal_text_black"
             android:textSize="@dimen/dimtext10"
             app:layout_constraintStart_toEndOf="@+id/blue_circle"
             app:layout_constraintTop_toTopOf="@+id/blue_circle" />
@@ -384,7 +383,7 @@
             android:elevation="@dimen/dim4"
             android:fontFamily="@font/poppins_bold"
             android:text="@string/carbText"
-            android:textColor="@color/text_color"
+            android:textColor="@color/normal_text_black"
             android:textSize="@dimen/dimtext10"
             app:layout_constraintBottom_toBottomOf="@+id/carb_text"
             app:layout_constraintEnd_toEndOf="@+id/protein_number"
@@ -399,7 +398,7 @@
             android:elevation="@dimen/dim4"
             android:fontFamily="@font/poppins_regular"
             android:text="@string/carb"
-            android:textColor="@color/text_color"
+            android:textColor="@color/normal_text_black"
             android:textSize="@dimen/dimtext10"
             app:layout_constraintStart_toEndOf="@+id/orange_circle"
             app:layout_constraintTop_toTopOf="@+id/orange_circle" />
@@ -423,7 +422,7 @@
             android:elevation="@dimen/dim4"
             android:fontFamily="@font/poppins_bold"
             android:text="@string/fatText"
-            android:textColor="@color/text_color"
+            android:textColor="@color/normal_text_black"
             android:textSize="@dimen/dimtext10"
             app:layout_constraintBottom_toBottomOf="@+id/fat_text"
             app:layout_constraintEnd_toEndOf="@+id/carb_number"
@@ -437,7 +436,7 @@
             android:elevation="@dimen/dim4"
             android:fontFamily="@font/poppins_regular"
             android:text="@string/fat"
-            android:textColor="@color/text_color"
+            android:textColor="@color/normal_text_black"
             android:textSize="@dimen/dimtext10"
             app:layout_constraintStart_toStartOf="@+id/carb_text"
             app:layout_constraintTop_toTopOf="@+id/yellow_circle" />
