--- a/app/src/main/res/layout/fragment_calorie.xml
+++ b/app/src/main/res/layout/fragment_calorie.xml
@@ -26,7 +26,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginTop="16dp"
-        app:cardBackgroundColor="#fff"
+        app:cardBackgroundColor="@color/card_bg"
         app:cardCornerRadius="8dp"
         app:cardElevation="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -132,7 +132,7 @@
             android:layout_height="wrap_content"
             android:paddingVertical="4dp"
             android:text="2500"
-            android:textColor="#008E7F"
+            android:textColor="@color/numbers_color"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/card_status_description"
