fix color in dark theme

--- a/app/src/main/res/layout/fragment_calorie.xml
+++ b/app/src/main/res/layout/fragment_calorie.xml
@@ -102,7 +102,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:text="70%"
-            android:textColor="@color/black"
+            android:textColor="@color/number_calures"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@+id/imageView"
@@ -117,7 +117,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="142dp"
             android:text="Goal calorie :  "
-            android:textColor="#979797"
+            android:textColor="@color/color_gole"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/textView8"
             app:layout_constraintStart_toEndOf="@+id/progress_bar"
