--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -6,7 +6,7 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#262626</color>
-    <color name="number_calures">#577E75</color>
+    <color name="number_calories">#577E75</color>
     <color name="white">#FFFFFFFF</color>
     <color name="primary">#559960</color>
     <color name="text_color">#FFFFFF</color>
