--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -28,7 +28,7 @@
             android:layout_width="@dimen/size_icon_normal"
             android:layout_height="@dimen/size_icon_normal"
             android:layout_marginStart="@dimen/margin_normal"
-            android:layout_marginTop="@dimen/margin_larg"
+            android:layout_marginTop="@dimen/margin_large"
             android:background="@color/card_bg"
             android:src="@drawable/ic_arrow_back_24"
             app:layout_constraintStart_toStartOf="parent"
@@ -40,7 +40,7 @@
             android:id="@+id/appbarTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_larg"
+            android:layout_marginTop="@dimen/margin_large"
             android:text="Details"
             android:textSize="@dimen/appbar_title_size"
             android:textStyle="bold"
@@ -65,9 +65,9 @@
             android:id="@+id/title_details"
             android:layout_width="195dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marginmedum"
-            android:layout_marginTop="@dimen/marginlarge"
-            android:elevation="@dimen/elevationlarg"
+            android:layout_marginStart="@dimen/margin_medium"
+            android:layout_marginTop="@dimen/margin_Large"
+            android:elevation="@dimen/elevation_large"
             android:gravity="start"
             android:shadowColor="@color/normal_text_black"
             android:text="@string/name_of_meal"
@@ -97,7 +97,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_small"
-            android:elevation="@dimen/elevation_smail"
+            android:elevation="@dimen/elevation_small"
             android:text="@string/_214_g"
                 app:layout_constraintStart_toEndOf="@id/green_circle"
                 app:layout_constraintTop_toTopOf="@id/green_circle" />
@@ -107,7 +107,7 @@
             android:id="@+id/carbs_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:elevation="@dimen/elevation_smail"
+            android:elevation="@dimen/elevation_small"
             android:text="Carbs"
             android:textSize="10sp"
             android:textColor="@color/label_color"
@@ -122,7 +122,7 @@
                 android:layout_marginStart="@dimen/margin_mid"
                 android:background="@drawable/circle_shape"
                 android:backgroundTint="@color/light_blue_pie_chart"
-                android:elevation="@dimen/elevation_smail"
+                android:elevation="@dimen/elevation_small"
                 app:layout_constraintBottom_toBottomOf="@id/pie_chart_details"
                 app:layout_constraintStart_toEndOf="@id/pie_chart_details"
                 app:layout_constraintTop_toTopOf="@id/pie_chart_details" />
@@ -134,7 +134,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_small"
-            android:elevation="@dimen/elevation_smail"
+            android:elevation="@dimen/elevation_small"
             android:text="@string/_211_g"
                 app:layout_constraintStart_toEndOf="@id/red_circle"
                 app:layout_constraintTop_toTopOf="@id/red_circle" />
@@ -144,7 +144,7 @@
             android:id="@+id/carbs2_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:elevation="@dimen/elevation_smail"
+            android:elevation="@dimen/elevation_small"
             android:text="@string/protein"
             android:textColor="@color/label_color"
             android:textSize="10sp"
@@ -159,7 +159,7 @@
                 android:layout_marginStart="16dp"
                 android:background="@drawable/circle_shape"
                 android:backgroundTint="@color/dark_green_pie_chart"
-                android:elevation="@dimen/elevation_smail"
+                android:elevation="@dimen/elevation_small"
                 app:layout_constraintBottom_toBottomOf="@id/pie_chart_details"
                 app:layout_constraintStart_toEndOf="@+id/carb_number"
                 app:layout_constraintTop_toTopOf="@id/pie_chart_details" />
@@ -170,7 +170,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_small"
-            android:elevation="@dimen/elevation_smail"
+            android:elevation="@dimen/elevation_small"
             android:text="@string/_216_g"
                 app:layout_constraintStart_toEndOf="@id/yellow_circle"
                 app:layout_constraintTop_toTopOf="@id/yellow_circle" />
@@ -180,7 +180,7 @@
             android:id="@+id/carbs3_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:elevation="@dimen/elevation_smail"
+            android:elevation="@dimen/elevation_small"
             android:text="@string/fat"
             android:textColor="@color/label_color"
             android:textSize="10sp"
@@ -195,7 +195,7 @@
                 android:layout_marginStart="16dp"
                 android:background="@drawable/circle_shape"
                 android:backgroundTint="@color/green_text_color"
-                android:elevation="@dimen/elevation_smail"
+                android:elevation="@dimen/elevation_small"
                 app:layout_constraintBottom_toBottomOf="@id/pie_chart_details"
                 app:layout_constraintStart_toEndOf="@+id/protein_number"
                 app:layout_constraintTop_toTopOf="@id/pie_chart_details" />
