--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,22 +4,22 @@
     <dimen name="size_icon_normal">24dp</dimen>
     <dimen name="size_btn_icon_normal">36dp</dimen>
     <dimen name="margin_normal">16dp</dimen>
-    <dimen name="margin_larg">17dp</dimen>
+    <dimen name="margin_large">17dp</dimen>
     <dimen name="margin_mid">6dp</dimen>
     <dimen name="margin_small">4dp</dimen>
     <dimen name="size_pie_chart">120dp</dimen>
     <dimen name="size_text_button">14sp</dimen>
     <dimen name="size_main_image">200dp</dimen>
     <dimen name="size_space">75dp</dimen>
-    <dimen name="marginmedum">12dp</dimen>
-    <dimen name="marginlarge">100dp</dimen>
-    <dimen name="elevationlarg">18dp</dimen>
+    <dimen name="margin_medium">12dp</dimen>
+    <dimen name="margin_Large">100dp</dimen>
+    <dimen name="elevation_large">18dp</dimen>
     <dimen name="size_title">18sp</dimen>
-    <dimen name="elevation_smail">2dp</dimen>
+    <dimen name="elevation_small">2dp</dimen>
     <dimen name="text_size_small">12sp</dimen>
     <dimen name="label_size">14sp</dimen>
-    <dimen name="item_margen_top">8dp</dimen>
-    <dimen name="item_margen_bottom">8dp</dimen>
+    <dimen name="item_margin__top">8dp</dimen>
+    <dimen name="item_margin_bottom">8dp</dimen>
     <dimen name="item_shadow">8dp</dimen>
     <dimen name="item_redius">8dp</dimen>
     <dimen name="item_margen_horizontal">16dp</dimen>
